--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_catalogoTipo_Info
 @{
-    ViewBag.Title = "Nuevo Catalogo ";
+    ViewBag.Title = "Nuevo Catálogo ";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
