--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Modificar.cshtml
@@ -20,7 +20,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdDivision">División</label>
+                    <label for="IdDivision">División*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdDivision, settings =>
                {
                    settings.Name = "IdDivision";
@@ -49,7 +49,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdArea">Área</label>
+                    <label for="IdArea">Área*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdDivision, settings =>
                {
                    settings.Name = "IdArea";
@@ -78,7 +78,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdDepartamento">Departamento</label>
+                    <label for="IdDepartamento">Departamento*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdDepartamento, settings =>
                {
                    settings.Name = "IdDepartamento";
