--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
@@ -3,17 +3,16 @@
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_CatalogoTipo";
         settings.CallbackRouteValues = new { Controller = "CatalogoTipoRRHH", Action = "GridViewPartial_CatalogoTipo" };
-
-
         settings.KeyFieldName = "IdTipoCatalogo";
         settings.Width = Unit.Percentage(100);
 
+        //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-
+        //Configuración scrolling y pager
         settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
         settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
         settings.Settings.VerticalScrollableHeight = 400;
@@ -21,14 +20,12 @@
         settings.SettingsPager.PageSize = 10;
         settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
         settings.SettingsPager.AlwaysShowPager = true;
-
-
+        //Configuración filtro por columna
         settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         settings.Settings.ShowFilterRow = true;
         settings.Settings.ShowHeaderFilterButton = true;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
-
-
+        //Configuracion exportacion
         settings.SettingsExport.EnableClientSideExportAPI = true;
         settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
         settings.Toolbars.Add(t =>
@@ -46,6 +43,7 @@
             if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
+        //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
             if (Convert.ToString(e.GetValue("ca_estado")) == "I")
@@ -77,7 +75,6 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-
         settings.Columns.Add("IdTipoCatalogo","ID").Width=Unit.Percentage(8);
         settings.Columns.Add("Codigo","Código").Width = Unit.Percentage(8);
         settings.Columns.Add("tc_Descripcion","Descripción").Width = Unit.Percentage(70);
