--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Nuevo.cshtml
@@ -14,7 +14,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdDivision">División</label>
+                    <label for="IdDivision">División*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdDivision, settings =>
                {
                    settings.Name = "IdDivision";
@@ -43,7 +43,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdArea">Área</label>
+                    <label for="IdArea">Área*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdDivision, settings =>
                {
                    settings.Name = "IdArea";
@@ -72,7 +72,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdDepartamento">Departamento</label>
+                    <label for="IdDepartamento">Departamento*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdDepartamento, settings =>
                {
                    settings.Name = "IdDepartamento";
