--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Proveedor", Action = "CmbProveedor_exterior", Area = "CuentasPorPagar" };
+        settings.CallbackRouteValues = new { Controller = "OrdencompraExterior", Action = "CmbProveedor_exterior", Area = "Importacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "info_persona.pe_nombreCompleto";
@@ -15,11 +15,11 @@
         settings.Properties.ValueType = typeof(decimal);
 
         settings.Properties.Columns.Add("IdProveedor", "ID", 5);
-        settings.Properties.Columns.Add("pe_cedulaRuc", "Cedula", 15);
+        settings.Properties.Columns.Add("info_persona.pe_cedulaRuc", "Cedula", 15);
         settings.Properties.Columns.Add("info_persona.pe_nombreCompleto", "Provedor", 80);
     })
-    .BindList(new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.ProveedorController().get_list_bajo_demanda, new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.ProveedorController().get_info_bajo_demanda)
-    .Bind(Model.IdProducto);
+    .BindList(new Core.Erp.Web.Areas.Importacion.Controllers.OrdenCompraExteriorController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Importacion.Controllers.OrdenCompraExteriorController().get_info_bajo_demanda)
+    .Bind(Model.IdProveedor);
 
 }
 @comboBox.GetHtml()
