--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "OrdencompraExterior", Action = "CmbProveedor_exterior", Area = "Importacion" };
+        settings.CallbackRouteValues = new { Controller = "OrdenCompraExterior", Action = "CmbProveedor_exterior", Area = "Importacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "info_persona.pe_nombreCompleto";
