--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext_det.cshtml
@@ -30,9 +30,9 @@
         settings.InitNewRow = (s, e) =>
         {
             e.NewValues["IdProducto"] = 0;
-            e.NewValues["IdUnidadMedida_sinConversion"] = null;
-            e.NewValues["dm_cantidad_sinConversion"] = 0;
-            e.NewValues["mv_costo_sinConversion"] = 0;
+            e.NewValues["IdUnidadMedida"] = null;
+            e.NewValues["od_cantidad"] = 0;
+            e.NewValues["od_costo"] = 0;
         };
 
         settings.Columns.Add(column =>
